# ANDF

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
andf/: __init__.py  ai_layer.py  cli.py  document.py  installer.py  parser.py  renderer.py
docs/: index.html
examples/: business_report.andf  create_examples.py  legal_contract.andf  research_paper.andf  technical_manual.andf
scripts/: build_dmg.sh
spec/: ANDF-1.0.md
tests/: test_andf.py
